--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,18 @@
           </execution>
         </executions>
       </plugin>
+      <groupId>pl.allegro</groupId>
+        <artifactId>grunt-maven-plugin</artifactId>
+        <version>1.4.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>npm</goal>
+              <goal>grunt</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
